name:                dash-haskell
version:             1.1.0.1
synopsis:            Convert package Haddock to Dash docsets (IDE docs)
homepage:            http://www.github.com/jfeltz/dash-haskell
Bug-reports:         https://github.com/jfeltz/dash-haskell/issues
license:             LGPL-3
license-file:        LICENSE
author:              John P. Feltz
maintainer:          jfeltz@gmail.com
copyright:           (c) 2014, 2015 John P. Feltz 
category:            Documentation
build-type:          Simple
cabal-version:       >= 1.22
extra-source-files:  README.md 

description: 
  A Dash.app docset is a file-layout for allowing easy lookup and
  indexing of programming docs, e.g. API functions and modules. A
  number of plugins offer docset lookup in editors such as Emacs and
  Vim.  By using this tool, one can convert haskell package haddock(s)
  to docsets.
  .
  The major benefit of dash-haskell, is that once these docsets are
  built, dash tools provide one of the few, if only solutions for
  offline, contextual, and project dependency approximate IDE
  documentation for Haskell.
  .
  Usage Examples:
  .
  >$ dash-haskell parsec-3.1.5
  .
  builds:
  .
  >./docsets/parsec-3.1.5.docset
  .
  >$ dash-haskell -c foo.cabal -s
  .           
  builds all packages listed as dependencies in the cabal file, using the
  default db ordering (global, sandbox, user).
  .
  Note: haddock documentation for the package must first be built prior to calling dash-haskell on it, e.g.
  .
  >$ cabal install --only-dependencies --enable-documentation
  .
  Versions:
  .
  The version numbering scheme for this package is defined as follows, given: 
  .
  >dash-haskell-a.b.c.d
  .
  a, b index interface or feature changes to the CLI
  .
  c, d index bug-fix and documentation updates
  .


executable dash-haskell
  main-is:        Main.hs
  other-modules:  FilePath
                  Options.Documentation
                  Options.Db
                  Options.Cabal
                  Data.Maybe.Util
                  Data.String.Util
                  PackageConf
                  Options
                  Control.Monad.M
                  Db
                  Haddock.Sqlite
                  Haddock.Artifact
                  Pipe.Conf
                  Pipe.FileSystem
                  PackageId

  build-depends:  Cabal                  >= 1.18.0
                  , base                 >= 4.7 && <= 4.9
                  , containers           >= 0.5.5.1
                  , direct-sqlite        >= 2.3.13
                  , directory            >= 1.2.1.0
                  , either               >= 4.3
                  , filepath             >= 1.4.0.0
                  , ghc                  >= 7.10.1
                  , optparse-applicative >= 0.11.0.1
                  , pipes                >= 4.1.0
                  , sqlite-simple        >= 0.4.5.0
                  , tagsoup              >= 0.12.7
                  , text                 >= 0.7.1
                  , transformers         >= 0.2 && < 0.5
                  , parsec               >= 3.1.5
                  , haddock-api          >= 2.15.0
  ghc-options:         -Wall -rtsopts
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jfeltz/dash-haskell.git
